--- a/ClientApp/src/app/modules/master/customer/add-edit-customer/add-edit-customer.component.html
+++ b/ClientApp/src/app/modules/master/customer/add-edit-customer/add-edit-customer.component.html
@@ -7,7 +7,23 @@
           </div>
           <div class="card-body">
             <div class="row">
+              <div class="col-12 col-md-6 col-lg-4">
+                <div class="form-group has-float-label">
+                  <input class="form-control" id="companyName" type="text" placeholder="Company Name"
+                         formControlName="companyName" [(ngModel)]="customer.companyName" />
+                  <label for="companyName">Company Name</label>
+                  <div *ngIf="addClientForm.controls['companyName'].invalid && (addClientForm.controls['companyName'].dirty || addClientForm.controls['companyName'].touched)"
+                       class="error-msg">
+                    <div *ngIf="addClientForm.controls['companyName'].errors.required">
+                      Company name is required.
+                    </div>
 
+                  </div>
+                  <div *ngIf="customerExist" class="error-msg">
+                      {{customerExist}}
+                     </div>
+                </div>
+              </div>
               <div class="col-12 col-md-6 col-lg-4">
                 <div class="form-group">
                   <span class="plain-select">
@@ -38,23 +54,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-12 col-md-6 col-lg-4">
-                <div class="form-group has-float-label">
-                  <input class="form-control" id="companyName" type="text" placeholder="Company Name"
-                         formControlName="companyName" [(ngModel)]="customer.companyName" />
-                  <label for="companyName">Company Name</label>
-                  <div *ngIf="addClientForm.controls['companyName'].invalid && (addClientForm.controls['companyName'].dirty || addClientForm.controls['companyName'].touched)"
-                       class="error-msg">
-                    <div *ngIf="addClientForm.controls['companyName'].errors.required">
-                      Company name is required.
-                    </div>
 
-                  </div>
-                  <div *ngIf="customerExist" class="error-msg">
-                      {{customerExist}}
-                     </div>
-                </div>
-              </div>
               <div class="col-12 col-md-6 col-lg-4">
                 <div class="form-group has-float-label">
                   <input class="form-control" id="clientEmail" type="text" placeholder="Customer Email"
@@ -87,7 +87,7 @@
 
               <div class="col-12 col-md-6 col-lg-4">
                 <div class="form-group has-float-label">
-                  <input class="form-control" type="text" id="mobileNo" placeholder="Mobile Number 1"
+                  <input class="form-control" type="number" id="mobileNo" placeholder="Mobile Number 1"
                          formControlName="mobileNo" [(ngModel)]="customer.ownerMobileNo">
                   <label for="mobileNo"> Mobile Number 1</label>
                   <div *ngIf="addClientForm.controls['mobileNo'].invalid && (addClientForm.controls['mobileNo'].dirty || addClientForm.controls['mobileNo'].touched)"
@@ -101,7 +101,7 @@
 
               <div class="col-12 col-md-6 col-lg-4">
                 <div class="form-group has-float-label">
-                  <input class="form-control" type="text" id="mobileNoFirst" placeholder="Mobile Number 2"
+                  <input class="form-control" type="number" id="mobileNoFirst" placeholder="Mobile Number 2"
                          formControlName="mobileNoFirst1" [(ngModel)]="customer.mobileNoFirst">
                   <label for="mobileNoFirst"> Mobile Number 2</label>
 
@@ -110,7 +110,7 @@
 
               <div class="col-12 col-md-6 col-lg-4">
                 <div class="form-group has-float-label">
-                  <input class="form-control" type="text" id="telNoFirst" placeholder="Telephone Number 1"
+                  <input class="form-control" type="number" id="telNoFirst" placeholder="Telephone Number 1"
                          formControlName="telNoFirst1" [(ngModel)]="customer.telNoFirst">
                   <label for="telNoFirst"> Telephone Number 1 </label>
 
